// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventStream.mapError follows function construction semantics 1`] = `
Array [
  Next {
    "value": "lol",
  },
  Next {
    "value": "tsers",
  },
  Next {
    "value": "bal",
  },
  End {},
]
`;

exports[`EventStream.mapError maps error events and passthroughs next events 1`] = `
Array [
  Next {
    "value": "lol",
  },
  Next {
    "value": "tsers!",
  },
  Next {
    "value": "bal",
  },
  End {},
]
`;

exports[`Property.mapError maps error events and passthroughs next events 1`] = `
Array [
  Next {
    "value": "...",
  },
  Sync {},
  Next {
    "value": "lol",
  },
  Next {
    "value": "tsers!",
  },
  Next {
    "value": "bal",
  },
  End {},
]
`;
